<resources>
    <string name="app_name">HealthCard</string>
    <string name="security_question">Sie sind dabei das Kind mit allen Daten zu löschen. Wollen sie fortfahren?</string>
    <string name="no_measurement_data">Es existieren noch keine Messdaten für dieses Kind.</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="male">männlich</string>
    <string name="female">weiblich</string>
    <string name="firstName">Vorname</string>
    <string name="lastName">Nachname</string>
    <string name="gender">Geschlecht</string>
    <string name="birthdate">Geburtstag</string>
    <string name="cancel">Abbrechen</string>
    <string name="save">Speichern</string>
    <string name="valueInvalid">Eingabe ungültig</string>
    <string name="ValidationMessageDateWrong">Das eingegebene Datum ist ungültig. Bitte geben Sie ein Datum im Format 31.12.2016 an.</string>
    <string name="ok">Ok</string>
    <string name="ValidationMessageNameMissing">Es muss mindestens ein Vorname oder Nachname eingegeben werden.</string>
    <string name="ValidationTitle">Konsistenzprüfung fehlgeschlagen</string>
    <string name="ValidationMessageNoSexSelected">Bitte wählen Sie das Geschlecht des Kindes aus.</string>
    <string name="ValidationMessageNoMeasurementValues">Bitte geben sie mindestens eine der beiden Messgrößen an.</string>
    <string name="ValidationMessageNoMeasurementDate">Bitte wählen Sie das Datum, an dem Sie die Werte gemessen haben.</string>
    <string name="height3rd">Größe</string>
    <string name="weight3rd">Gewicht</string>
    <string name="date">Datum</string>
    <string name="deleteChildSecurityQuestion">Wollen sie den Eintrag und alle bisher erfassten Daten wirklich unwiderruflich löschen?</string>
    <string name="percentile3">3% Perzentil</string>
    <string name="percentile15">15% Perzentil</string>
    <string name="median">Mittelwert</string>
    <string name="percentile85">85% Perzentil</string>
    <string name="percentile97">97% Perzentil</string>
    <string name="year">J</string>
    <string name="month">M</string>
    <string name="kg">kg</string>
    <string name="m">m</string>
    <string name="cm">cm</string>
    <string name="BMI">BMI</string>
</resources>