<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/ic_add_person"
        android:id="@+id/ibPortrait"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        tools:ignore="ContentDescription"/>



    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="5"
        android:id="@+id/glDetails"
        android:layout_below="@+id/ibPortrait"
        android:layout_alignParentStart="true">


        <EditText
            android:layout_column="1"
            android:layout_row="0"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etFirstName"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textColor="@android:color/black"
            android:layout_marginLeft="8dp"/>

        <TextView
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvFistName"
            android:labelFor="@id/etFirstName"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/birthdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvBirthday"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"/>

        <EditText
            android:layout_column="1"
            android:layout_row="2"
            android:layout_height="wrap_content"
            android:id="@+id/tvBirthdate"
            android:layout_width="280dp"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textColor="@android:color/black"
            android:layout_marginLeft="8dp"
            android:editable="false"/>

        <TextView
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSex"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"/>

        <RadioGroup
            android:layout_column="1"
            android:layout_row="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:text="@string/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbFemale"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"/>

            <RadioButton
                android:text="@string/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbMale"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"/>
        </RadioGroup>

        <EditText
            android:layout_column="1"
            android:layout_row="1"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:id="@+id/etLastName"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textColor="@android:color/black"
            android:layout_marginLeft="8dp"
            android:layout_width="280dp"/>

        <TextView
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvLastName"
            android:labelFor="@id/etLastName"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"/>

    </GridLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/glDetails"
        android:layout_centerInParent="true">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btCancel"
            android:layout_weight="1"/>

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btSave"
            android:layout_weight="1"/>
    </LinearLayout>

</RelativeLayout>
</ScrollView>