<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <TextView
        android:text="@string/dateOfMeasurement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvDateLabel"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:id="@+id/tvDate"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:layout_marginLeft="8dp"
        android:ellipsize="end"
        android:editable="false"/>

    <TextView
        android:text="@string/height3rd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:id="@+id/tvHeightLabel"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:inputType="numberDecimal"
        android:layout_column="1"
        android:layout_row="1"
        android:id="@+id/etHeight"
        android:layout_marginLeft="8dp"
        android:ellipsize="end"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

    <TextView
        android:text="@string/weight3rd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:id="@+id/tvWeight"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:inputType="numberDecimal"
        android:layout_column="1"
        android:layout_row="2"
        android:id="@+id/etWeight"
        android:layout_marginLeft="8dp"
        android:ellipsize="end"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btCancel"
            android:layout_weight="1"/>

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btSave"
            android:layout_weight="1"/>
    </LinearLayout>
</GridLayout>

